--- a/styles/style2.css
+++ b/styles/style2.css
@@ -130,7 +130,15 @@
         border:1px solid #016abb;
         box-shadow:0 3px 3px rgba(0,0,0,0.15);
     }
+    #puffer-pool .puffer .loading {
+        border:0;
+        margin:0 auto;
+        display:block;
+        box-shadow:none;
+        width:32px;
+        height:32px;
 
+    }
     #puffer-pool .puffer .rare {
         position:absolute; 
         top:-2px;
