--- a/styles/style2.css
+++ b/styles/style2.css
@@ -20,7 +20,19 @@
     font-display: swap;
     }
     
-    
+
+    .transfer {
+        background-color: #0087EC; 
+        color: white; 
+        font-weight: 400;
+        position: absolute; 
+        bottom: -4px;
+        padding: 5px;
+        border-radius: 7px;
+        left: 0;
+        width: 100%;
+    }
+
     #bodyy {
         background-image: url('/images/tile.png');
         /* background:blue; */
@@ -108,6 +120,7 @@
         box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
         background:#fff;
         padding:10px;
+        padding-bottom: 40px;
         border-radius:10px;
         border: 1px solid #ddd;
         border-width:0 1px 1px 1px;
