--- a/styles/style2.css
+++ b/styles/style2.css
@@ -211,9 +211,67 @@
         margin:2px;
         font-size:9px;
     }
+
+    .rarity-header {
+        font-size: 25px;
+        margin-top:10px;
+        margin-bottom:10px;
+    }
+
+    .closemodal {
+        background: #000;
+        color: #fff;
+        display: block;
+        padding: 10px 15px;
+        text-align: center;
+        margin-top: 50px;
+        position: absolute;
+        bottom: 20px;
+        left: 5%;
+        width: 90%;
+    }
+
+    .ReactModalPortal ul li{
+        width:50%;
+        display:inline-block;
+        margin-bottom:15px;
+    }
+
+    .ReactModalPortal ul li span {
+        background:#eee;
+        border-radius:5px;
+        margin:5px 0;
+        padding:3px 10px;
+        color:#444;
+    }
+
+    .ReactModalPortal ul li strong {
+        font-weight:800;
+    }
+
+    .Modal {
+        border-radius:25px;
+        box-shadow:3px 3px 3px rgba(0,0,0,0.25);
+    }
+
+    .ReactModalPortal .ReactModal__Overlay {
+        background-color:rgba(2, 63, 149, 0.5) !important;
+    }
+
+    .ReactModalPortal .ReactModal__Content {
+        border-radius:25px !important;
+    }
     
     @media (min-width: 1280px) {
         .xl\:rnftg-grid-cols-4 {
             grid-template-columns: repeat(3,minmax(0,1fr));
+        }
+    }
+
+
+
+    @media (max-width:600px) {
+        .ReactModalPortal ul li {
+            width:100%;
         }
     }
