--- a/styles/style2.css
+++ b/styles/style2.css
@@ -24,11 +24,9 @@
     .transfer {
         /* background-color: #6fb9f1;  */
         color: white; 
-        font-size:20px;
+        font-size:18px;
+        padding: 6px;
         font-weight: 400;
-        position: absolute; 
-        bottom: 0;
-        padding: 0;
         border-radius: 7px;
         right: 10px;
         width: auto;
